2006-11-18  Kurt A. Stephens  <kurt@umleta.com>

	* Initial release